# falutez

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: bench-serio.cpp
include/: falutez.hpp
include/falutez/: falutez-generic-client.hpp  falutez-http-status.hpp  falutez-impl-restclient.hpp  falutez-serio.hpp  falutez-types-headers.hpp  falutez-types-parameters.hpp  falutez-types-std.hpp  falutez-types.hpp  falutez.hpp  serio.hpp
src/: falutez.cpp
tests/: rest-server-fixture.hpp  test-falutez-restclient.cpp  test-falutez.cpp  test-serio.cpp
